--- a/node-app/Dockerfile
+++ b/node-app/Dockerfile
@@ -4,12 +4,12 @@ FROM node:latest
 # Устанавливаем рабочую директорию внутри контейнера
 WORKDIR /app
 
-# Копируем файлы из локальной директории в контейнер
-COPY node-app/package.json .
-COPY node-app/index.js .
+# Копируем файлы из папки node-app внутрь контейнера
+# COPY node-app/package.json .  # Закомментируйте или удалите эту строку
+# COPY node-app/index.js .      # Закомментируйте или удалите эту строку
 
 # Устанавливаем зависимости Node.js
 RUN npm install
 
-# Запускаем приложение при запуске контейнера
+# Определяем команду для запуска приложения
 CMD ["node", "index.js"]
