--- a/python-app/Dockerfile
+++ b/python-app/Dockerfile
@@ -1,11 +1,11 @@
 # Используем базовый образ Python
-FROM python:latest
+FROM python:3
 
 # Устанавливаем рабочую директорию внутри контейнера
 WORKDIR /app
 
-# Копируем файлы из локальной директории в контейнер
-COPY python-app/main.py .
+# Копируем файлы из папки python-app внутрь контейнера
+# COPY python-app/main.py .  # Закомментируйте или удалите эту строку
 
-# Запускаем команду при запуске контейнера
+# Определяем команду для запуска приложения
 CMD ["python", "main.py"]
