--- a/node-app/Dockerfile
+++ b/node-app/Dockerfile
@@ -4,12 +4,15 @@ FROM node:latest
 # Устанавливаем рабочую директорию внутри контейнера
 WORKDIR /app
 
-# Копируем файлы из папки node-app внутрь контейнера
-# COPY node-app/package.json .  # Закомментируйте или удалите эту строку
-# COPY node-app/index.js .      # Закомментируйте или удалите эту строку
+# Копируем package.json и package-lock.json в контейнер
+COPY package*.json ./
 
-# Устанавливаем зависимости Node.js
+# Устанавливаем зависимости
 RUN npm install
 
+# Копируем все файлы из локальной директории в контейнер
+COPY . .
+
 # Определяем команду для запуска приложения
-CMD ["node", "index.js"]
+CMD ["npm", "start"]
+
